--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quick Quip | Cut short your long links in no time</title>
     <meta name="description" content="Discover the efficiency of QuickQuip, a MERN stack URL shortener. Streamline your link sharing process, enhance user experience, and boost your online visibility.">
